@@ -1,6 +1,7 @@
 1.9.1 /
 [Alexandr Topilski]
 - Validate server commands
+- Commands complex value
 
 1.9.0 / October 28, 2017
 [Alexandr Topilski]
