@@ -1,6 +1,7 @@
 1.10.0 /
 [Alexandr Topilski]
 - Validate server commands
+- Commands complex value
 
 1.9.10 / October 28, 2017
 [Alexandr Topilski]
